RESOLVED FIXED47811
Should not save state of a detached form control
https://bugs.webkit.org/show_bug.cgi?id=47811
Summary Should not save state of a detached form control
Kent Tamura
Reported 2010-10-18 04:06:51 PDT
Should not save state of a detached form control
Attachments
Patch (4.23 KB, patch)
2010-10-18 04:10 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-10-18 04:10:30 PDT
Kent Tamura
Comment 2 2010-10-18 04:12:59 PDT
I found this problem while I was investigating a crash issue of saveFormControlState(), http://code.google.com/p/chromium/issues/detail?id=57462 .
Dimitri Glazkov (Google)
Comment 3 2010-10-18 06:48:43 PDT
Comment on attachment 71019 [details] Patch Ok.
Kent Tamura
Comment 4 2010-10-18 22:34:07 PDT
Comment on attachment 71019 [details] Patch Clearing flags on attachment: 71019 Committed r70027: <http://trac.webkit.org/changeset/70027>
Kent Tamura
Comment 5 2010-10-18 22:34:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.