2010-10-18  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        Should not save state of a detached form control.
        https://bugs.webkit.org/show_bug.cgi?id=47811

        * fast/forms/state-save-of-detached-control-expected.txt: Added.
        * fast/forms/state-save-of-detached-control.html: Added.
2010-10-18  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        Should not save state of a detached form control.
        https://bugs.webkit.org/show_bug.cgi?id=47811

        Test: fast/forms/state-save-of-detached-control.html

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElementWithState::shouldSaveAndRestoreFormControlState):
          If the node is detached, don't save the state.

Canonical link: https://commits.webkit.org/60592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70027 268f45cc-cd09-0410-ab3c-d52691b4dbfc